[package]
name = "gs1900"
version = "0.1.0"
authors = ["Sebastian Reichel <sre@ring0.de>"]
edition = "2018"

[features]
default = ["web"]
web = ["reqwest","tokio","random-integer"]

[dependencies]
lazy_static = "1.4.0"
ssh2 = "0.7"
regex = "1"
bitflags = "1.2"
reqwest = { version = "0.10", features = ["blocking", "json"], optional = true }
tokio = { version = "0.2", features = ["full"], optional = true }
random-integer = { version = "1.0", optional = true }
