[package]
name = "gs1900"
version = "0.1.0"
authors = ["Sebastian Reichel <sre@ring0.de>"]
edition = "2018"

[features]
default = ["web"]
web = ["reqwest","tokio","random-integer"]

[dependencies]
lazy_static = "1.4.0"
ssh2 = "0.9"
regex = "1"
bitflags = "1.3"
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
random-integer = { version = "1.2", optional = true }
